--- a/index.html
+++ b/index.html
@@ -58,16 +58,9 @@
         fill: black;
       }
 
-      //             .style("text-anchor", "middle")
-      //             .attr("x",	function(d)	{	return d.x;	})
-      //             .attr("y",	function(d)	{	return d.y;	})
-      //             .attr("font-family", "sans-serif")
-      //             .attr("font-size", "20px")
-      //             .attr("fill", "black")
-
   </style>
 
-  <title>Restaurants of San Francisco</title>
+  <title>The Carbon Consequences of Diet</title>
 
   <!--   This is where you should import your style sheet  -->
   <!--  <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
