on my way to a search

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
       -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
-
+.myUL {
+    /* Remove default list styling */
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 
   </style>
 
@@ -70,7 +75,7 @@
 
   <!--   This is where you should import your style sheet  -->
   <!--  <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
-  <input type="text" name="search" placeholder="Search..">
+  <!-- <input type="text" name="search" placeholder="Search.."> -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
 
 </head>
