bar chart updates when category is chosen

--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
   font-size: 12px;
   font-family: sans-serif;
 }
+.dropdown {
+  font-weight: bold;
+  font-size: 18px;
+  font-family: sans-serif;
+  position: absolute;
+  left: 100px;
+}
 
   </style>
 
@@ -101,7 +108,8 @@
 <body>
   <!-- <div id = dropdown1div></div> -->
   <div id = plot1div></div>
-  <div id = plot2div></div?
+  <div id = plot2dropdown></div>
+  <div id = plot2div></div>
   <!--   This is where you should import your Javascript code  -->
   <script src="js/scripts.js"></script>
 </body>
