--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       }
       .plot1AllCircles {
         r: 3;
-        fill: #A9A9A9;
+        /* fill: #A9A9A9; */
       }
       .sliderCircle {
         r: 4;
