--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   left: 100px;
 }
 .xaxis{
-  
+
 }
 
   </style>
@@ -114,6 +114,6 @@
   <div id = plot2dropdown></div>
   <div id = plot2div></div>
   <!--   This is where you should import your Javascript code  -->
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts2.js"></script>
 </body>
 </html>
