doesn't show grayed out element tooltip

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 .xaxis{
 
 }
+.highlight{
+
+}
 
   </style>
 
@@ -110,8 +113,9 @@
 
 <body>
   <!-- <div id = dropdown1div></div> -->
+    <div id = plot2dropdown></div>
   <div id = plot1div></div>
-  <div id = plot2dropdown></div>
+
   <div id = plot2div></div>
   <!--   This is where you should import your Javascript code  -->
   <script src="js/scripts2.js"></script>
