--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       }
       .plot1AllCircles {
         r: 3;
+        stroke-width: 0;
         /* fill: #A9A9A9; */
       }
       .sliderCircle {
@@ -115,9 +116,9 @@
   <!-- <div id = dropdown1div></div> -->
     <div id = plot2dropdown></div>
   <div id = plot1div></div>
-
-  <div id = plot2div></div>
+<div id = plot3dropdown></div>
+  <div id = plot3div></div>
   <!--   This is where you should import your Javascript code  -->
-  <script src="js/scripts2.js"></script>
+  <script src="js/scripts3.js"></script>
 </body>
 </html>
