reference lines for diet planner

--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
 .highlight{
 
 }
+.description{
+  font-weight: bold;
+  font-size: 18px;
+  font-family: sans-serif;
+  position: absolute;
+  left: 100px;
+}
 
   </style>
 
@@ -114,8 +121,12 @@
 
 <body>
   <!-- <div id = dropdown1div></div> -->
+  <div id = intro ><p class = "description" >
+    When it comes to enironmental imact, not all foods are created equal,
+    <p/></div>
     <div id = plot2dropdown></div>
   <div id = plot1div></div>
+
 <div id = plot3dropdown></div>
   <div id = plot3div></div>
   <!--   This is where you should import your Javascript code  -->
