--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 }
 .plotTitle{
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
   font-family: sans-serif;
 }
 .axisLabel{
   font-weight: bold;
-  font-size: 16px;
+  font-size: 14px;
   font-family: sans-serif;
 }
 .refLine {
@@ -107,6 +107,11 @@
   position: absolute;
   left: 100px;
 }
+.plateText{
+  font-weight: bold;
+  font-size: 12px;
+  font-family: sans-serif;
+}
 
   </style>
 
@@ -130,6 +135,6 @@
 <div id = plot3dropdown></div>
   <div id = plot3div></div>
   <!--   This is where you should import your Javascript code  -->
-  <script src="js/scripts3.js"></script>
+  <script src="js/scripts4.js"></script>
 </body>
 </html>
