could be presented

--- a/index.html
+++ b/index.html
@@ -102,12 +102,17 @@
 }
 .description{
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
   font-family: sans-serif;
   position: absolute;
   left: 100px;
 }
 .plateText{
+  font-weight: bold;
+  font-size: 12px;
+  font-family: sans-serif;
+}
+.ticks{
   font-weight: bold;
   font-size: 12px;
   font-family: sans-serif;
@@ -126,14 +131,24 @@
 
 <body>
   <!-- <div id = dropdown1div></div> -->
-  <div id = intro ><p class = "description" >
-    When it comes to enironmental imact, not all foods are created equal,
-    <p/></div>
+  <div id = intro >
+    <p class = "description" >
+      <!-- The food industry is a major source of world greenhouse gas emissions (GHGE).
+      According to a study by the IPCC, an estimated 10-12% of world GHGEs come from
+      agriculture ignoring fuel use, fertilizers, and land changes, and accounting for these factors,
+      the estimate grows to 30%.
+
+      When it comes to enironmental imact, not all foods are created equal.
+      A recent study by researcher at the University of Michigan (Heller et. al, 2018)
+      showed that just -->
+  </p>
+    </div>
     <div id = plot2dropdown></div>
   <div id = plot1div></div>
 
 <div id = plot3dropdown></div>
   <div id = plot3div></div>
+  <div id = plot6div></div>
   <!--   This is where you should import your Javascript code  -->
   <script src="js/scripts4.js"></script>
 </body>
