--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 </div>
 
 
-<script src="lib/d3.js"></script>
+<!-- <script src="lib/d3.js"></script> -->
+<script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="js/scroller.js"></script>
-<script src="js/sections.js"></script>
+<script src="js/sections_modified.js"></script>
 </body>
 </html>
