--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <div class="title">Section 3</div>
         Here are all 5,040 words of my talk.
       </section>
+      <section class="step">
+        <div class="title">Meats</div>
+        Don't eat beef.
+      </section>
     </div>
     <div id='vis'>
     </div>
