need to fix opacity and transitions

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       </section>
       <section class="step">
         <div class="title">Meats</div>
+        First let's look at the meats.
+      </section>
+      <section class="step">
+        <div class="title">Meats</div>
         Don't eat beef.
       </section>
     </div>
