properly removes bars when shouldn't be seen

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         <div class="title">Meats</div>
         Don't eat beef.
       </section>
+      <section class="step">
+        <div class="title">Consider protein alternatives.</div>
+        There are lots of options for proteins that can provide the same nutritional value as meats, but have a much lower carbon footprint per serving.
+      </section>
+      <section class="step">
+        <div class="title"></div>
+        For instance, choosing a serving of beans over a serving of meat can...
+      </section>
     </div>
     <div id='vis'>
     </div>
