colored text to match bars

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </section>
       <section class="step">
         <div class="title">Consider protein alternatives.</div>
-        There are lots of options for proteins that can provide the same nutritional value as meats, but have a much lower carbon footprint per serving.
+        There are lots of options for <b><font color="#ff7f00">protein alternatives</font></b> to <b><font color="#e41a1c">meat</font></b> that can provide the same nutritional value as meats, but have a much lower carbon footprint per serving.
       </section>
       <section class="step">
         <div class="title"></div>
