--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
         What if this paragrah
       </section>
       <section class="step">
-        <div class="title">Section 3</div>
-        Here are all 5,040 words of my talk.
+        <div class="title">Not all foods emit equally.</div>
+        In a comparison of greenhouse gas emissions per serving of 300 common food items, a few foods tower over the rest.
       </section>
       <section class="step">
-        <div class="title">Meats</div>
-        First let's look at the meats.
+        <div class="title">Let's take a look at the meats.</div>
+        Meats tend to be worse on emissions than other food groups in general, but some options are much better than others.
       </section>
       <section class="step">
-        <div class="title">Meats</div>
-        Don't eat beef.
+        <div class="title"></div>
+        For instance, choosing a serving of turkey instead of a serving of beef reduces emissions by almost 10X.
+
       </section>
       <section class="step">
         <div class="title">Consider protein alternatives.</div>
@@ -35,7 +36,7 @@
       </section>
       <section class="step">
         <div class="title"></div>
-        For instance, choosing a serving of beans over a serving of meat can...
+        Beans and nuts provide some of the lowest carbon options for protein.
       </section>
     </div>
     <div id='vis'>
