scatter plot works too

--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
   <div id='graphic'>
     <div id='sections'>
       <section class="step">
-        <div class="title">Section 1</div>
-        I did what no presenter
-      </section>
-      <section class="step">
         <div class="title">Section 2</div>
         What if this paragrah
       </section>
@@ -22,8 +18,12 @@
         In a comparison of greenhouse gas emissions per serving of 300 common food items, a few foods tower over the rest.
       </section>
       <section class="step">
+        <div class="title">Calories</div>
+        Calories
+      </section>
+      <section class="step">
         <div class="title">Let's take a look at the meats.</div>
-        Meats tend to be worse on emissions than other food groups in general, but some options are much better than others.
+        Meat tends to be worse on emissions than the other food groups, but some options are much better than others.
       </section>
       <section class="step">
         <div class="title"></div>
@@ -36,7 +36,7 @@
       </section>
       <section class="step">
         <div class="title"></div>
-        Beans and nuts provide some of the lowest carbon options for protein.
+        Beans and nuts provide some of the lowest carbon options for protein, but even switching to tofu or eggs will help reduce emissions compare to most meats.
       </section>
     </div>
     <div id='vis'>
