fixed tooltips for scatter

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <div class="title"></div>
         Beans and nuts provide some of the lowest carbon options for protein, but even switching to tofu or eggs will help reduce emissions compare to most meats.
       </section>
+      <section class="step">
+        <div class="title">Diet Planner</div>
+        Click on a food item to add it to your diet.
+      </section>
     </div>
     <div id='vis'>
     </div>
