--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <section class="step">
         <div class="title">Diet Planner</div>
         Click on a food item to add it to your diet.
+        <div id="dp"></div>
+        <div id="diet_planner_section"></div>
       </section>
     </div>
     <div id='vis'>
