reference lines for 1 and 5 miles show up

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   <div id='graphic'>
     <div id='sections'>
       <section class="step">
-        <div class="title">Section 2</div>
-        What if this paragrah
-      </section>
-      <section class="step">
         <div class="title">Not all foods emit equally.</div>
         In a comparison of greenhouse gas emissions per serving of 300 common food items, a few foods tower over the rest.
+      </section>
+      <section class="step">
+        <div class="title"></div>
+        Eating just one 3oz serving of sheep, beef, or crustacean (e.g. lobster, crab, shrimp) emits more greenhouse gases than driving 5 miles in an average car.
+      </section>
+      <section class="step">
+        <div class="title"></div>
+        1 mile
       </section>
       <section class="step">
         <div class="title">Calories</div>
