--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       </section>
       <section class="step">
         <div class="title"></div>
-        1 mile
+        Most other common food commodities fall near or below 1 mile driving in an average car.
       </section>
       <section class="step">
-        <div class="title">Calories</div>
-        Calories
+        <div class="title">More greenhouse gas doesn't mean more calories.</div>
+        Caloric value is not strongly correlated with the greenhouse gas emissions it takes to produce a given type of food.
       </section>
       <section class="step">
         <div class="title">Let's take a look at the meats.</div>
@@ -40,11 +40,16 @@
       </section>
       <section class="step">
         <div class="title"></div>
-        Beans and nuts provide some of the lowest carbon options for protein, but even switching to tofu or eggs will help reduce emissions compare to most meats.
+        Beans and nuts provide some of the lowest carbon options for protein, but even switching to tofu or eggs will help reduce emissions compared to most meats.
       </section>
       <section class="step">
-        <div class="title">Diet Planner</div>
-        Click on a food item to add it to your diet.
+        <div class="title">Low-Carbon Diet Planner</div>
+        Now it's time to see how your diet stacks up. How do your emissions compare to the median in the US?
+        <p></p>
+        <p>Instructions:</p>
+        <p>- To view a food group, click it on the legend.</p>
+        <p>- To add a serving of food to your diet, click the food on the bar chart.</p>
+        <p>- To remove a servinng of food from your diet, click the item under "My Diet". </p>
         <div id="dp"></div>
         <div id="diet_planner_section"></div>
       </section>
